--- a/app1.html
+++ b/app1.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>App 1</title>
+</head>
+<body>
+	<h1>App 1</h1>
+	
+	<p>Welcome to App 1!</p>
+	
+	<ul>
+		<li><a href="privacy.html">Privacy Policy</a></li>
+		<li><a href="terms.html">Terms and Conditions</a></li>
+	</ul>
+	
+	<p><a href="index.html">Back to main page</a></p>
+</body>
+</html>
