--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Apps</title>
+	<title>Jackie's Apps</title>
 </head>
 <body>
-	<h1>My Apps</h1>
+	<h1>Jackie's Apps</h1>
 	
 	<ul>
-		<li><a href="app1.html">App 1</a></li>
-		<li><a href="app2.html">App 2</a></li>
+		<li><a href="app1.html">MultiAttentionTrainer</a></li>
+		<li><a href="app2.html">WordOctopus</a></li>
 	</ul>
 </body>
 </html>
