--- a/app1.html
+++ b/app1.html
@@ -9,7 +9,7 @@
 	<p>Welcome to App 1!</p>
 	
 	<ul>
-		<li><a href="privacy.html">Privacy Policy</a></li>
+		<li><a href="privacy_policy.html">Privacy Policy</a></li>
 		<li><a href="terms.html">Terms and Conditions</a></li>
 	</ul>
 	
