--- a/app1.html
+++ b/app1.html
@@ -11,6 +11,7 @@
 	<ul>
 		<li><a href="privacy_policy.html">Privacy Policy</a></li>
 		<li><a href="terms.html">Terms and Conditions</a></li>
+		<li><a href="auto_renewal_agreement.html">Auto Renewal Terms</a></li>
 	</ul>
 	
 	<p><a href="index.html">Back to main page</a></p>
